5Aug26-details materialreturn all test cases fixed